force-app/main/default/objects/Centre_Users__c/Centre_Users__c.object-meta.xml
<CustomObject>
    <label>Centre User</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Centre Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>