force-app/main/default/objects/Centre_Users__c/fields/Centre_Name__c.field-meta.xml
<CustomField>
    <fullName>Centre_Name__c</fullName>
    <label>Centre Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Centre</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Centre Users</relationshipLabel>
    <relationshipName>Centre_Users</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>