force-app/main/default/objects/Centre_Users__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>User Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Centre Admin</fullName>
            </value>
            <value>
                <fullName>Centre Manager</fullName>
            </value>
            <value>
                <fullName>Regional Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>