force-app/main/default/objects/Centre_Users__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Centre_Users</relationshipName>
    <type>Lookup</type>
</CustomField>